[gd_scene load_steps=22 format=2]

[ext_resource path="res://DeckEdit/CardEdit.gd" type="Script" id=1]
[ext_resource path="res://DeckEdit/Cardselect/DeckEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://DeckEdit/Regulator.gd" type="Script" id=3]
[ext_resource path="res://Resources/LargeFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Art/dood.png" type="Texture" id=5]
[ext_resource path="res://Music/Button_Pressed.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Art/Card.png" type="Texture" id=8]
[ext_resource path="res://DeckEdit/Unlocked.gd" type="Script" id=9]
[ext_resource path="res://Music/DeckEdit.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Ice Beetle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Ice Spider"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Ice Wurm"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Snow Snail"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[node name="CardEdit" type="Node2D"]
position = Vector2( -6.02939, -1.50732 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -12.5971, 0 )
scale = Vector2( 1.01768, 1 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 20, -200 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 18.3722, 35.6637 )

[node name="VSlider" type="VSlider" parent="."]
margin_left = 103.761
margin_top = 214.144
margin_right = 119.761
margin_bottom = 317.144
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="DeckEdit1" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 200, 150 )

[node name="DeckEdit2" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 300, 150 )

[node name="DeckEdit3" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 400, 150 )

[node name="DeckEdit4" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 500, 150 )

[node name="DeckEdit5" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 600, 150 )

[node name="DeckEdit6" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 700, 150 )

[node name="DeckEdit7" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 800, 150 )

[node name="DeckEdit8" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 200, 300 )

[node name="DeckEdit9" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 300, 300 )

[node name="DeckEdit10" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 400, 300 )

[node name="DeckEdit11" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 500, 300 )

[node name="DeckEdit12" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 600, 300 )

[node name="DeckEdit13" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 700, 300 )

[node name="DeckEdit14" parent="Node" instance=ExtResource( 2 )]
position = Vector2( 800, 300 )

[node name="Button" type="Button" parent="."]
margin_left = 480.486
margin_top = 432.14
margin_right = 526.486
margin_bottom = 452.14
custom_fonts/font = ExtResource( 4 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0

[node name="Unlocked" type="Sprite" parent="."]
visible = false
position = Vector2( 510.659, 231.222 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
vframes = 2
hframes = 6
frame = 3
script = ExtResource( 9 )

[node name="Name" type="Label" parent="Unlocked"]
modulate = Color( 0, 0.0901961, 1, 1 )
margin_left = -38.3773
margin_top = -57.8868
margin_right = -10.3773
margin_bottom = -40.8868
custom_fonts/font = ExtResource( 7 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="Unlocked"]
modulate = Color( 0, 0.0901961, 1, 1 )
margin_left = -34.0544
margin_top = 27.4901
margin_right = -6.05442
margin_bottom = 44.4901
custom_fonts/font = ExtResource( 7 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Unlocked"]
modulate = Color( 0, 0.0901961, 1, 1 )
margin_left = 25.5943
margin_top = -60.5459
margin_right = 34.5943
margin_bottom = -34.5459
custom_fonts/font = ExtResource( 4 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Unlocked"]
modulate = Color( 0, 0.0901961, 1, 1 )
margin_left = -7.15247
margin_top = 36.7272
margin_right = 19.8475
margin_bottom = 62.7272
custom_fonts/font = ExtResource( 4 )
text = "1|2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Unlocked"]
"anims/Frost Spirit" = SubResource( 1 )
"anims/Frost Sword" = SubResource( 2 )
"anims/Ice Beetle" = SubResource( 3 )
"anims/Ice Giant" = SubResource( 4 )
"anims/Ice Shield" = SubResource( 5 )
"anims/Ice Spider" = SubResource( 6 )
"anims/Ice Wurm" = SubResource( 7 )
"anims/Snow Crab" = SubResource( 8 )
"anims/Snow Drake" = SubResource( 9 )
"anims/Snow Snail" = SubResource( 10 )
anims/Yeti = SubResource( 11 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="used" from="." to="Node" method="_on_CardEdit_used"]
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="selected" from="Node" to="." method="_on_Node_selected"]
[connection signal="used" from="Node" to="Node/DeckEdit4" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit3" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit2" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit1" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit5" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit8" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit13" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit9" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit10" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit11" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit12" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit6" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit7" method="_on_Node_used"]
[connection signal="used" from="Node" to="Node/DeckEdit14" method="_on_Node_used"]
[connection signal="selected" from="Node/DeckEdit1" to="Node" method="_on_DeckEdit1_selected"]
[connection signal="selected" from="Node/DeckEdit2" to="Node" method="_on_DeckEdit2_selected"]
[connection signal="selected" from="Node/DeckEdit3" to="Node" method="_on_DeckEdit3_selected"]
[connection signal="selected" from="Node/DeckEdit4" to="Node" method="_on_DeckEdit4_selected"]
[connection signal="selected" from="Node/DeckEdit5" to="Node" method="_on_DeckEdit5_selected"]
[connection signal="selected" from="Node/DeckEdit6" to="Node" method="_on_DeckEdit6_selected"]
[connection signal="selected" from="Node/DeckEdit7" to="Node" method="_on_DeckEdit7_selected"]
[connection signal="selected" from="Node/DeckEdit8" to="Node" method="_on_DeckEdit8_selected"]
[connection signal="selected" from="Node/DeckEdit9" to="Node" method="_on_DeckEdit9_selected"]
[connection signal="selected" from="Node/DeckEdit10" to="Node" method="_on_DeckEdit10_selected"]
[connection signal="selected" from="Node/DeckEdit11" to="Node" method="_on_DeckEdit11_selected"]
[connection signal="selected" from="Node/DeckEdit12" to="Node" method="_on_DeckEdit12_selected"]
[connection signal="selected" from="Node/DeckEdit13" to="Node" method="_on_DeckEdit13_selected"]
[connection signal="selected" from="Node/DeckEdit14" to="Node" method="_on_DeckEdit14_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
